# pytriton

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  COPYRIGHT  Jenkinsfile  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  tox.ini  versions.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: stale.yaml
0.1.4/: 404.html  index.html  objects.inv  pypi.rst  sitemap.xml
0.1.4/CHANGELOG/: index.html
0.1.4/CONTRIBUTING/: index.html
0.1.4/LICENSE/: index.html
0.1.4/api/: index.html
0.1.4/building/: index.html
0.1.4/deploying_models/: index.html
0.1.4/examples/: index.html
0.1.4/inference_callable/: index.html
0.1.4/installation/: index.html
0.1.4/known_issues/: index.html
0.1.4/pypi/: index.html
0.1.4/quick_start/: index.html
0.1.4/search/: search_index.json
0.1.5/: 404.html  index.html  objects.inv
0.1.5/CHANGELOG/: index.html
0.1.5/CONTRIBUTING/: index.html
0.1.5/LICENSE/: index.html
0.1.5/api/: index.html
0.1.5/building/: index.html
0.1.5/deploying_models/: index.html
0.1.5/examples/: index.html
0.1.5/inference_callable/: index.html
0.1.5/installation/: index.html
0.1.5/known_issues/: index.html
0.1.5/quick_start/: index.html
0.1.5/search/: search_index.json
0.2.0/: 404.html  index.html  objects.inv
0.2.0/CHANGELOG/: index.html
0.2.0/CONTRIBUTING/: index.html
0.2.0/LICENSE/: index.html
0.2.0/api/: index.html
0.2.0/binding_configuration/: index.html
0.2.0/binding_models/: index.html
0.2.0/building/: index.html
0.2.0/clients/: index.html
0.2.0/custom_params/: index.html
0.2.0/decorators/: index.html
0.2.0/deploying_in_clusters/: index.html
0.2.0/downloaded_input_data/: index.html
0.2.0/examples/: index.html
0.2.0/inference_callable/: index.html
0.2.0/initialization/: index.html
0.2.0/installation/: index.html
0.2.0/known_issues/: index.html
0.2.0/quick_start/: index.html
0.2.0/search/: search_index.json
0.2.1/: 404.html  index.html
0.2.1/CHANGELOG/: index.html
0.2.1/CONTRIBUTING/: index.html
0.2.1/LICENSE/: index.html
0.2.1/api/: index.html
0.2.1/binding_configuration/: index.html
0.2.1/binding_models/: index.html
0.2.1/building/: index.html
0.2.1/clients/: index.html
0.2.1/custom_params/: index.html
0.2.1/decorators/: index.html
0.2.1/deploying_in_clusters/: index.html
0.2.1/downloaded_input_data/: index.html
0.2.1/examples/: index.html
0.2.1/inference_callable/: index.html
0.2.1/initialization/: index.html
0.2.1/installation/: index.html
0.2.1/known_issues/: index.html
0.2.1/quick_start/: index.html
0.2.1/search/: search_index.json
0.2.2/: index.html  objects.inv
0.2.2/CHANGELOG/: index.html
0.2.2/CONTRIBUTING/: index.html
0.2.2/LICENSE/: index.html
0.2.2/binding_configuration/: index.html
0.2.2/binding_models/: index.html
0.2.2/clients/: index.html
0.2.2/deploying_in_clusters/: index.html
0.2.2/examples/: index.html
0.2.2/inference_callable/: index.html
0.2.2/installation/: index.html
0.2.2/quick_start/: index.html
0.2.2/search/: search_index.json
0.2.3/: 404.html
0.2.3/CHANGELOG/: index.html
0.2.3/api/: index.html
0.2.3/building/: index.html
0.2.3/custom_params/: index.html
0.2.3/decorators/: index.html
0.2.3/downloaded_input_data/: index.html
0.2.3/examples/: index.html
0.2.3/initialization/: index.html
0.2.3/known_issues/: index.html
0.2.3/quick_start/: index.html
0.2.3/search/: search_index.json
0.2.4/: 404.html  index.html  objects.inv
0.2.4/CHANGELOG/: index.html
0.2.4/CONTRIBUTING/: index.html
0.2.4/LICENSE/: index.html
0.2.4/api/: index.html
0.2.4/binding_configuration/: index.html
0.2.4/binding_models/: index.html
0.2.4/building/: index.html
0.2.4/clients/: index.html
0.2.4/custom_params/: index.html
0.2.4/decorators/: index.html
0.2.4/deploying_in_clusters/: index.html
0.2.4/downloaded_input_data/: index.html
0.2.4/examples/: index.html
0.2.4/inference_callable/: index.html
0.2.4/initialization/: index.html
0.2.4/installation/: index.html
0.2.4/known_issues/: index.html
0.2.4/quick_start/: index.html
0.2.4/search/: search_index.json
0.2.5/: 404.html  index.html
0.2.5/CHANGELOG/: index.html
0.2.5/CONTRIBUTING/: index.html
0.2.5/LICENSE/: index.html
0.2.5/api/: index.html
0.2.5/binding_configuration/: index.html
0.2.5/binding_models/: index.html
0.2.5/building/: index.html
0.2.5/clients/: index.html
0.2.5/custom_params/: index.html
0.2.5/decorators/: index.html
0.3.0/: 404.html  index.html  objects.inv
0.3.1/: 404.html  index.html  objects.inv
0.4.0/: 404.html  index.html
0.4.1/: 404.html  index.html  objects.inv
0.4.2/: 404.html  index.html  objects.inv
0.5.0/: 404.html  index.html  pypi.rst
0.5.1/: 404.html  index.html
0.5.10/: index.html
0.5.11/: 404.html  index.html
0.5.12/: 404.html  index.html
0.5.13/: 404.html  index.html  objects.inv
0.5.14/: 404.html  index.html  objects.inv
0.5.2/: 404.html  index.html
0.5.3/: 404.html  index.html  objects.inv
0.5.4/: index.html
0.5.5/: 404.html  index.html
0.5.6/: 404.html  index.html  pypi.rst
0.5.7/: index.html
0.5.8/: 404.html  index.html
0.5.9/: 404.html  index.html  objects.inv
0.6.0/: 404.html  index.html
0.7.0/: 404.html  index.html  objects.inv
docs/: README.md  api.md  binding_configuration.md  binding_models.md  building.md  clients.md  custom_params.md  decorators.md  deploying_in_clusters.md  deploying_models.md  high_level_design.md  inference_callable.md  inference_functions.md  initialization.md  installation.md  known_issues.md  pypi.md  pypi.rst  quick_start.md  remote_triton.md
examples/: README.md
latest/: 404.html  index.html
pytriton/: __init__.py  __main__.py  constants.py  decorators.py  exceptions.py  triton.py
scripts/: Dockerfile.build  add_libs_to_wheel.sh  auditwheel_patched.py  build_python_stubs.sh  build_triton.sh  build_wheel.sh  extract_triton.sh  manylinux_version.py  rewrite_links_to_repo.py
tests/: utils.py
(+952 files in other folders)
